# cmots-alt

./: .gitignore  README.md  pyproject.toml  scratch_db.py  scratch_encryption_js.txt  scratch_find_sbi_amfi.py  scratch_icici_statutory.html  scratch_portfolios_js.txt  scratch_sbi.py  scratch_sbi_api_test.py  scratch_sbi_bottom_rows.py  scratch_sbi_cols.py  scratch_sbi_common_js.py  scratch_sbi_common_search.py  scratch_sbi_disclosure_api.py  scratch_sbi_disclosures.py  scratch_sbi_download_xlsx.py  scratch_sbi_encryption_service.py  scratch_sbi_fetch_all.py  scratch_sbi_fetch_js.py  scratch_sbi_funds.py  scratch_sbi_get_portfolio.py  scratch_sbi_get_schemes_api.py  scratch_sbi_infra_amfi.py  scratch_sbi_infra_amfi_ci.py  scratch_sbi_infra_portfolio.xlsx  scratch_sbi_inline.py  scratch_sbi_inspect_xlsx.py  scratch_sbi_js_all.py  scratch_sbi_js_search.py  scratch_sbi_js_search2.py  scratch_sbi_js_search3.py  scratch_sbi_js_search4.py  scratch_sbi_js_search5.py  scratch_sbi_js_search6.py  scratch_sbi_js_search7.py  scratch_sbi_js_uppercase.py  scratch_sbi_map_amfi.py  scratch_sbi_pattern.py  scratch_sbi_portfolio_85.html  (+16 more)
.claude/: settings.local.json
config/: identifier_aliases.csv  mc_sector_map.yaml  sector_master.csv  sector_taxonomy.yaml  settings.yaml  short_name_abbreviations.yaml  short_name_overrides.csv
scripts/: combined_coverage_test.py  diag_coverage.py  mc_crawl_test.py  mc_debug.py  mc_debug2.py  mc_match_test.py  mc_vocab_and_fuzzy.py  peek_company.py  peek_output.py  probe_bse.py  probe_bse2.py  probe_fields.py  probe_mc.py  probe_mc2.py  probe_sector.py  (+5 more)
(+347 files in other folders)
